changed input field margin for alignment issues

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -56,7 +56,7 @@ label {
 }
 
 input {
-  margin: 10px;
+  margin: 10px 0px;
 }
 
 /*
